--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@tailwindcss/forms": "^0.5.3",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
